# proto

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  mkdocs.yml  update.sh
.github/workflows/: npm.yaml  update-docs.yaml
docs/: index.md
docs/proto/: api.md  block.md  lattice.md  node_admin.md  node_user.md  node_wallet_manager.md
node/: api.proto  p2p.proto  rpc.proto
node/rpc/: account.proto  admin.proto  block.proto  lattice.proto  node_admin.proto  node_user.proto  node_wallet_manager.proto  private.proto
python/: .gitignore  generate.sh  setup.py
python/pog_proto/: __init__.py  pog_proto.py
python/pog_proto/node/: __init__.py  api_pb2.py  p2p_pb2.py
python/pog_proto/node/rpc/: __init__.py  lattice_pb2.py  node_admin_pb2.py  node_user_pb2.py  node_wallet_manager_pb2.py
rust/: Cargo.toml  build.rs  lib.rs  util.rs
src/: build.rs  lib.rs
typescript/: files.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
typescript/scripts/: build.js  bump.js  docs.js
