[package]
authors = ["The POG Contributors <contact@pog.network>"]
build = "build.rs"
edition = "2018"
name = "pog-proto"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
sha3 = "0.10"
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"

[lib]
path = "lib.rs"
